[gd_scene load_steps=4 format=3 uid="uid://b52ntg6ft8q8r"]

[ext_resource type="Script" path="res://logistics/requisitions_module/foodGame/FoodNote.gd" id="1_r23ki"]
[ext_resource type="Texture2D" uid="uid://3eisy24woaai" path="res://aseprite-files/note-block.png" id="2_3cckk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mokwy"]
size = Vector2(48, 96)

[node name="FoodNote" type="Node2D" groups=["Note"]]
script = ExtResource("1_r23ki")
minimumSpeed = 150.0
maximumSpeed = 225.0

[node name="Sprite2D" type="Sprite2D" parent="." groups=["FoodNote"]]
texture = ExtResource("2_3cckk")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_mokwy")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1.43051e-06, -1.90735e-06)
scale = Vector2(2.4, 4.8)

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
